モーション管理をエンティティとモデルから分離させて管理するようにした。